# advent2024

./: Cargo.toml
indata/: day12.txt  day5.txt  day5_map.txt
src/shaders/: shader_1.wgsl  shader_1_1.wgsl
