[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"

# for the wgpu examples
wgpu = "23.0.1"
bytemuck = "1.20.0"
flume = "0.11.1"
env_logger = "0.11.5"
pollster = "0.4.0"